# 90-day-challenge

./: LICENSE  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
dailychallenges/day-001/: README.md  code.py  pyproject.toml
dailychallenges/day-002/: README.md  code.py
dailychallenges/day-003/: code.py
