[tool.poetry]
name = "90-day-ai-engineer"
version = "0.1.0"
description = "90 Day AI Engineer Challenge"
authors = ["Praveena Sarepalli <your-email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.3.3"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.6"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"